swagger added, refactor logs, added all endpoint
